--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -52,10 +52,14 @@ set_target_properties(swscale PROPERTIES IMPORTED_LOCATION ${distribution_DIR}/l
 
 find_library( # Sets the name of the path variable.
               log-lib
-
               # Specifies the name of the NDK library that
               # you want CMake to locate.
-              log )
+              log)
+find_library( # Sets the name of the path variable.
+              android-lib
+              # Specifies the name of the NDK library that
+              # you want CMake to locate.
+              android)
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
@@ -72,7 +76,8 @@ target_link_libraries( # Specifies the target library.
                        swscale
                        # Links the target library to the log library
                        # included in the NDK.
-                       ${log-lib} )
+                       ${log-lib}
+                       ${android-lib})
 
 #将.so文件打包到apk中
 add_custom_command(TARGET native-lib PRE_BUILD
